--- a/TokoSewaGameConsole/nbproject/project.properties
+++ b/TokoSewaGameConsole/nbproject/project.properties
@@ -33,11 +33,14 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/TokoSewaGameConsole
 excludes=
+file.reference.mysql-connector-j-8.3.0.jar=C:\\Users\\Anzio\\Videos\\mysql-connector-j-8.3.0\\mysql-connector-j-8.3.0\\mysql-connector-j-8.3.0.jar
 file.reference.mysql-connector-j-9.3.0.jar=C:\\Program Files\\Java\\mysql-connector-j-9.3.0\\mysql-connector-j-9.3.0\\mysql-connector-j-9.3.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-j-9.3.0.jar}
+    ${file.reference.mysql-connector-j-9.3.0.jar}:\
+    ${file.reference.mysql-connector-j-8.3.0.jar}:\
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -73,7 +76,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=TokoSewaGameConsole
-main.class=tokosewagameconsole.TokoSewaGameConsole
+main.class=Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
